--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -103,6 +103,7 @@ header nav .navbar-main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 1px solid black;
   /* .action.active span {
         transform: rotate(135deg);
     }
@@ -212,338 +213,10 @@ header nav .navbar-main .action span {
   font-family: "Poppins", sans-serif;
 }
 
-* {
-  font-family: customFontOne;
-}
-
 main {
   margin-inline: 8em;
 }
 
-.first-sub-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 90vh;
-}
-
-.first-sub-section .fss-heading-container {
-  text-align: center;
-  margin-top: 2em;
-}
-
-.first-sub-section .fss-heading-container h1 {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: .5em;
-  font-size: 3rem;
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
-  /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
-}
-
-.first-sub-section .fss-heading-container h1:hover {
-  -webkit-box-shadow: blue 0px 0px 0px 2px inset, white 10px -10px 0px -3px, #1fc11b 10px -10px, white 20px -20px 0px -3px, #ffd913 20px -20px, white 30px -30px 0px -3px, #ff9c55 30px -30px, white 40px -40px 0px -3px, #ff5555 40px -40px;
-          box-shadow: blue 0px 0px 0px 2px inset, white 10px -10px 0px -3px, #1fc11b 10px -10px, white 20px -20px 0px -3px, #ffd913 20px -20px, white 30px -30px 0px -3px, #ff9c55 30px -30px, white 40px -40px 0px -3px, #ff5555 40px -40px;
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
-}
-
-.first-sub-section .fss-image-container {
-  height: 50%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.first-sub-section .fss-image-container img {
-  padding: 3em;
-}
-
-.first-sub-section .fss-image-container .fss-image-container:nth-child(1) {
-  padding-bottom: 5em;
-  height: 5em;
-}
-
-.first-sub-section .fss-image-container .fss-image-container:nth-child(2) {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-  height: 100%;
-}
-
-.fss-paragraph-container {
-  /* align-self: flex-end; */
-}
-
-.fss-paragraph-container h2 {
-  text-align: center;
-  padding: 2em 4em;
-  /* background-color: #f7f7f7; */
-  font-size: 1.6rem;
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
-}
-
-.fss-paragraph-container h2:hover {
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
-  -webkit-box-shadow: blue 0px -10px 0px 0px inset, white 0px 5px 0px -30px, #1fc11b 0px 10px, white 0px 15px 0px -30px, #ffd913 0px 20px, white 0px 25px 0px -30px, #ff9c55 0px 30px, white 0px 35px 0px -30px, #ff5555 0px 40px;
-          box-shadow: blue 0px -10px 0px 0px inset, white 0px 5px 0px -30px, #1fc11b 0px 10px, white 0px 15px 0px -30px, #ffd913 0px 20px, white 0px 25px 0px -30px, #ff9c55 0px 30px, white 0px 35px 0px -30px, #ff5555 0px 40px;
-}
-
-.second-sub-section {
-  /* height: max(100vh, 120vh); */
-  height: 100vh;
-}
-
-.second-sub-section .sss-content-organizer {
-  height: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.second-sub-section .sss-content-organizer .sss-first-image-desc-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-right: 14em;
-  padding-bottom: 1em;
-}
-
-.second-sub-section .sss-content-organizer .sss-first-image-desc-container .sssf-desc-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100%;
-}
-
-.second-sub-section .sss-content-organizer .sss-first-image-desc-container .sssf-desc-container p {
-  width: 100%;
-  max-width: 25em;
-  height: 100%;
-  /* padding: 3em;*/
-  padding-left: 2em;
-  /* padding: max(3vw, 1em); */
-  /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
-}
-
-.second-sub-section .sss-content-organizer .sss-first-image-desc-container img {
-  width: 100%;
-  max-width: 25em;
-  height: auto;
-}
-
-.second-sub-section .sss-content-organizer .sss-second-image-desc-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-top: 1em;
-  padding-left: 13em;
-}
-
-.second-sub-section .sss-content-organizer .sss-second-image-desc-container .ssss-desc-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100%;
-}
-
-.second-sub-section .sss-content-organizer .sss-second-image-desc-container .ssss-desc-container p {
-  width: 40vw;
-  max-width: 25em;
-  height: 100%;
-  /* padding: 3em;*/
-  padding-right: 2em;
-  /* padding-bottom: -10em; */
-  /* padding: max(3vw, 1em); */
-  /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
-}
-
-.second-sub-section .sss-content-organizer .sss-second-image-desc-container img {
-  width: 100%;
-  max-width: 25em;
-  height: auto;
-}
-
-.second-sub-section .sss-paragraph-container {
-  height: 20%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  /* background-color: #f7f7f7; */
-  /* filter: opacity(40%); */
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
-}
-
-.second-sub-section .sss-paragraph-container h3 {
-  margin: 4em;
-  margin-inline: 6em;
-  text-align: center;
-  font-size: 1.2rem;
-}
-
-.second-sub-section .sss-paragraph-container:hover {
-  -webkit-filter: opacity(100%);
-          filter: opacity(100%);
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
-  -webkit-box-shadow: 0px 20px 20px 2px rgba(95, 95, 95, 0.229);
-          box-shadow: 0px 20px 20px 2px rgba(95, 95, 95, 0.229);
-}
-
-.third-sub-section {
-  margin-top: 10em;
-}
-
-.third-sub-section .tss-image-container {
-  margin-inline: 10em;
-  display: -ms-grid;
-  display: grid;
-  gap: 3em;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  -ms-grid-rows: (1fr)[2];
-      grid-template-rows: repeat(2, 1fr);
-  /* img {
-                    max-height: 100%;
-                    min-width: 100%;
-                    object-fit: cover;
-                    vertical-align: bottom;
-                }
-                ul {
-                    display: flex;
-                    flex-wrap: wrap;
-                    list-style: none;
-                    gap: 1em;
-                }
-                li {
-                    height: 40vh;
-                    flex-grow: 1;
-                    display: inline-flex;
-                } */
-}
-
-.third-sub-section .tss-image-container img {
-  /* max-width: 25em;
-                    height: auto; */
-}
-
-.third-sub-section .tss-image-container div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.third-sub-section .tss-image-desc-container {
-  width: 100%;
-  margin-top: 10em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.third-sub-section .tss-image-desc-container .tss-sub-container {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: 10em;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.third-sub-section .tss-image-desc-container .tss-sub-container .tss-desc-container {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.third-sub-section .tss-image-desc-container .tss-sub-container .tss-desc-container p {
-  max-width: 20vw;
-  padding: 2em;
-  padding-left: 3em;
-  font-size: 130%;
-}
-
-.third-sub-section .tss-image-desc-container .tss-sub-container img {
-  /* width: 100%;
-                        max-width: 35em;
-                        height: auto;
-                        max-height: 35em; */
-  max-width: 30%;
-  height: auto;
-}
-
-/* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 .footer-main {
   margin-inline: 20vw;
   margin-top: 4em;
@@ -572,6 +245,83 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   color: #857f7fd6;
   text-decoration: underline;
   font-size: clamp(0.8vw, 1em);
+}
+
+/* @import "homepage"; */
+.about-section {
+  margin-top: 3em;
+  /* display: flex;
+    justify-content: center; */
+}
+
+.about-section .text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.about-section .text-container p {
+  margin: 2em;
+  padding: 3em;
+  width: 40vw;
+}
+
+.about-section .text-container .box-1 {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-left: 5em;
+  -webkit-box-shadow: 10px 10px 10px 2px #c6c6c6;
+          box-shadow: 10px 10px 10px 2px #c6c6c6;
+}
+
+.about-section .text-container .box-2 {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin-right: 5em;
+  -webkit-box-shadow: 10px 10px 10px 2px #c6c6c6;
+          box-shadow: 10px 10px 10px 2px #c6c6c6;
+}
+
+.about-section .text-container .box-3 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 2em;
+  margin-right: 8em;
+  -webkit-box-shadow: 10px 10px 10px 2px #c6c6c6;
+          box-shadow: 10px 10px 10px 2px #c6c6c6;
+}
+
+.contact-section {
+  border-top: 1px solid blue;
+  margin-top: 15em;
+  width: 100%;
+  height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact-section .contact-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact-section .contact-container input,
+.contact-section .contact-container button {
+  margin-top: 2em;
 }
 
 html,
