--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -10,6 +10,7 @@ header {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            border-bottom: 1px solid black;
             .logo {
                 img {
                     height: 70px;
