--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -31,17 +31,102 @@
 
 .contact-section {
     border-top: 1px solid blue;
-    margin-top: 15em;
+    border-bottom: 1px solid blue;
+    margin-top: 10em;
     width: 100%;
-    height: 50vh;
     display: flex;
     justify-content: center;
-    .contact-container {
-        display: flex;
-        flex-direction: column;
-        input,
-        button {
-            margin-top: 2em;
+    .contact-input-container {
+        max-width: 30em;
+        margin: 1em;
+        padding: 1em;
+        li {
+            display: block;
+            list-style: none;
+            margin-top: 1em;
         }
+        label {
+            margin-bottom: .2em;
+            display: flex;
+            flex-direction: column;
+            font-weight: bold;
+        }
+        input {
+            font-style: italic;
+        }
+        button {
+            margin-top: 1em;
+        }
+    }
+    /* .contact-container input[type=text],
+        .form-style-1 input[type=date],
+        .form-style-1 input[type=datetime],
+        .form-style-1 input[type=number],
+        .form-style-1 input[type=search],
+        .form-style-1 input[type=time],
+        .form-style-1 input[type=url],
+        .form-style-1 input[type=email],
+        textarea,
+        select {
+            box-sizing: border-box;
+            border: 1px solid #BEBEBE;
+            padding: 7px;
+            margin: 0px;
+            -webkit-transition: all 0.30s ease-in-out;
+            -moz-transition: all 0.30s ease-in-out;
+            -ms-transition: all 0.30s ease-in-out;
+            -o-transition: all 0.30s ease-in-out;
+            outline: none;
+        } */
+    /* .form-style-1 input[type=text]:focus,
+        .form-style-1 input[type=date]:focus,
+        .form-style-1 input[type=datetime]:focus,
+        .form-style-1 input[type=number]:focus,
+        .form-style-1 input[type=search]:focus,
+        .form-style-1 input[type=time]:focus,
+        .form-style-1 input[type=url]:focus,
+        .form-style-1 input[type=email]:focus,
+        .form-style-1 textarea:focus,
+        .form-style-1 select:focus {
+            box-shadow: 0 0 8px #88D5E9;
+            border: 1px solid #88D5E9;
+        } */
+    .name-input {
+        border: 1Px solid #ffffff00;
+        border-bottom: 1px solid #767676;
+        width: 49%;
+        box-sizing: border-box;
+        border: 1px solid #BEBEBE;
+        padding: 7px;
+        margin: 0px;
+        outline: none;
+    }
+    .name-input:hover {}
+    .name-input:focus {
+        box-shadow: 0 0 8px #88D5E9;
+        border: 1px solid #88D5E9;
+    }
+    .input-email {
+        border: 1Px solid #ffffff00;
+        border-bottom: 1px solid #767676;
+        width: 100%;
+    }
+    .input-subject-selector {
+        border: 1Px solid #ffffff00;
+        background-color: #ffffff00;
+        width: 100%;
+        optgroup {
+            color: white;
+        }
+    }
+    .input-message {
+        border: 1Px solid #ffffff00;
+        border-bottom: 1px solid #767676;
+        height: 12em;
+        min-height: 6em;
+        width: 100%;
+    }
+    .required {
+        color: red;
     }
 }
