--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -298,18 +298,64 @@ main {
 
 .contact-section {
   border-top: 1px solid blue;
-  margin-top: 15em;
+  border-bottom: 1px solid blue;
+  margin-top: 10em;
   width: 100%;
-  height: 50vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  /* .contact-container input[type=text],
+        .form-style-1 input[type=date],
+        .form-style-1 input[type=datetime],
+        .form-style-1 input[type=number],
+        .form-style-1 input[type=search],
+        .form-style-1 input[type=time],
+        .form-style-1 input[type=url],
+        .form-style-1 input[type=email],
+        textarea,
+        select {
+            box-sizing: border-box;
+            border: 1px solid #BEBEBE;
+            padding: 7px;
+            margin: 0px;
+            -webkit-transition: all 0.30s ease-in-out;
+            -moz-transition: all 0.30s ease-in-out;
+            -ms-transition: all 0.30s ease-in-out;
+            -o-transition: all 0.30s ease-in-out;
+            outline: none;
+        } */
+  /* .form-style-1 input[type=text]:focus,
+        .form-style-1 input[type=date]:focus,
+        .form-style-1 input[type=datetime]:focus,
+        .form-style-1 input[type=number]:focus,
+        .form-style-1 input[type=search]:focus,
+        .form-style-1 input[type=time]:focus,
+        .form-style-1 input[type=url]:focus,
+        .form-style-1 input[type=email]:focus,
+        .form-style-1 textarea:focus,
+        .form-style-1 select:focus {
+            box-shadow: 0 0 8px #88D5E9;
+            border: 1px solid #88D5E9;
+        } */
 }
 
-.contact-section .contact-container {
+.contact-section .contact-input-container {
+  max-width: 30em;
+  margin: 1em;
+  padding: 1em;
+}
+
+.contact-section .contact-input-container li {
+  display: block;
+  list-style: none;
+  margin-top: 1em;
+}
+
+.contact-section .contact-input-container label {
+  margin-bottom: .2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -317,11 +363,61 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-weight: bold;
 }
 
-.contact-section .contact-container input,
-.contact-section .contact-container button {
-  margin-top: 2em;
+.contact-section .contact-input-container input {
+  font-style: italic;
+}
+
+.contact-section .contact-input-container button {
+  margin-top: 1em;
+}
+
+.contact-section .name-input {
+  border: 1Px solid #ffffff00;
+  border-bottom: 1px solid #767676;
+  width: 49%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 1px solid #BEBEBE;
+  padding: 7px;
+  margin: 0px;
+  outline: none;
+}
+
+.contact-section .name-input:focus {
+  -webkit-box-shadow: 0 0 8px #88D5E9;
+          box-shadow: 0 0 8px #88D5E9;
+  border: 1px solid #88D5E9;
+}
+
+.contact-section .input-email {
+  border: 1Px solid #ffffff00;
+  border-bottom: 1px solid #767676;
+  width: 100%;
+}
+
+.contact-section .input-subject-selector {
+  border: 1Px solid #ffffff00;
+  background-color: #ffffff00;
+  width: 100%;
+}
+
+.contact-section .input-subject-selector optgroup {
+  color: white;
+}
+
+.contact-section .input-message {
+  border: 1Px solid #ffffff00;
+  border-bottom: 1px solid #767676;
+  height: 12em;
+  min-height: 6em;
+  width: 100%;
+}
+
+.contact-section .required {
+  color: red;
 }
 
 html,
