--- a/individual-work/wba-projekt-2/styles/_var.scss
+++ b/individual-work/wba-projekt-2/styles/_var.scss
@@ -1,6 +1,7 @@
 @font-face {
-    src: url(PHand.ttf);
+    src: url(SansPro.ttf);
     font-family: customFontOne;
 }
 
 $footer-color: #857f7fd6;
+$light-black-half-opacity-color: rgba(95, 95, 95, 0.551);
