--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -1,14 +1,19 @@
 .about-section {
     margin-top: 3em;
-    /* display: flex;
-    justify-content: center; */
+    .about-heading-container {
+        @include first-heading-container;
+    }
     .text-container {
         display: flex;
         flex-direction: column;
+        margin-top: 3em;
         p {
             margin: 2em;
-            padding: 3em;
+            padding: 2em;
             width: 40vw;
+        }
+        [class^="box-"] {
+            margin-top: 1em;
         }
         .box-1 {
             align-self: flex-start;
@@ -16,129 +21,147 @@
             box-shadow: 10px 10px 10px 2px #c6c6c6;
         }
         .box-2 {
-            align-self: flex-end;
+            align-self: center;
             margin-right: 5em;
             box-shadow: 10px 10px 10px 2px #c6c6c6;
         }
         .box-3 {
-            align-self: center;
+            align-self: flex-end;
             margin-top: 2em;
-            margin-right: 8em;
+            margin-right: 18em;
             box-shadow: 10px 10px 10px 2px #c6c6c6;
         }
     }
 }
 
 .contact-section {
-    border-top: 1px solid blue;
-    border-bottom: 1px solid blue;
     margin-top: 10em;
+    margin-bottom: 10em;
     width: 100%;
+    height: 100%;
+    border: 1px solid blue;
     display: flex;
     justify-content: center;
-    input[type=text] {
-        box-sizing: border-box;
-        border: 1px solid #BEBEBE;
-        padding: 7px;
-        margin: 0px;
-        -webkit-transition: all 0.30s ease-in-out;
-        -moz-transition: all 0.30s ease-in-out;
-        -ms-transition: all 0.30s ease-in-out;
-        -o-transition: all 0.30s ease-in-out;
-        outline: none;
-    }
-    input[type=text]:focus {
-        transition-duration: all 0.30s ease-in-out;
-        box-shadow: 0 0 8px #88D5E9;
-        border: 1px solid #88D5E9;
-    }
-    .contact-input-container {
-        max-width: 30em;
-        margin: 1em;
-        padding: 1em;
-        li {
-            display: block;
-            list-style: none;
-            margin-top: 1em;
+    .contact-container {
+        display: inline-flex;
+        flex-direction: column;
+        border: 1px solid orange;
+        .form-heading {
+            border: 1px solid red;
+            margin-left: 2em;
         }
-        label {
-            margin-bottom: .2em;
+        .form-container {
             display: flex;
-            flex-direction: column;
-            font-weight: bold;
+            justify-content: center;
+            border: 1px solid green;
         }
-        input {
+        .contact-input-container {
+            max-width: 30em;
+            margin: 1em;
+            padding: 1em;
+            li {
+                display: block;
+                list-style: none;
+                margin-top: 1.3em;
+            }
+            /* input[type=text] {
+    
+        }
+        input[type=text]:focus  */
+            /* label {
+                margin-bottom: .2em;
+                display: flex;
+                flex-direction: column;
+                font-weight: bold;
+            } */
+            input {
+                font-style: italic;
+                padding: 7px;
+                transition: all 0.30s ease-in-out;
+                outline: none;
+            }
+            input:focus {
+                transition-duration: all 0.30s ease-in-out;
+                box-shadow: 0 0 8px $light-black-half-opacity-color;
+                border-bottom: 1px solid $light-black-half-opacity-color;
+            }
+            /* button {
+                
+            } */
+            .button {
+                display: inline-block;
+                margin-top: 1.3em;
+                padding: 6px 20px 0px 20px;
+                border: none;
+                background-color: #ffffff00;
+                border-bottom: 2px solid black;
+                color: black;
+                /* font-family: inherit; */
+                /* text-align: center; */
+                /* font-size: 13px; */
+                /* box-shadow: 0px 14px 56px -11px #1875FF; */
+                width: 8em;
+                transition: all 0.4s;
+                cursor: pointer;
+            }
+            .button span {
+                cursor: pointer;
+                display: inline-block;
+                position: relative;
+                transition: 0.4s;
+            }
+            .button span:after {
+                content: 'now';
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: -20px;
+                transition: 0.4s;
+            }
+            .button:hover span {
+                padding-right: 2.3em;
+            }
+            .button:hover span:after {
+                opacity: 4;
+                right: 0;
+            }
+        }
+        .name-input {
+            border: 1Px solid #ffffff00;
+            border-bottom: 1px solid #767676;
+            width: 49%;
+        }
+        .input-email {
+            border: 1Px solid #ffffff00;
+            border-bottom: 1px solid #767676;
+            width: 100%;
+        }
+        /* .input-subject-selector {
+            border: 1Px solid #ffffff00;
+            background-color: #ffffff00;
+            width: 100%;
+            optgroup {
+                color: white;
+            }
+        } */
+        .input-message {
+            border: 1Px solid #ffffff00;
+            border-bottom: 1px solid #767676;
+            height: 10em;
+            min-height: 6em;
+            width: 100%;
             font-style: italic;
-            transition-duration: all 0.30s ease-in-out;
-        }
-        button {
-            margin-top: 1em;
-        }
-    }
-    /* .contact-container input[type=text],
-        .form-style-1 input[type=date],
-        .form-style-1 input[type=datetime],
-        .form-style-1 input[type=number],
-        .form-style-1 input[type=search],
-        .form-style-1 input[type=time],
-        .form-style-1 input[type=url],
-        .form-style-1 input[type=email],
-        textarea,
-        select {
-            box-sizing: border-box;
-            border: 1px solid #BEBEBE;
             padding: 7px;
-            margin: 0px;
-            -webkit-transition: all 0.30s ease-in-out;
-            -moz-transition: all 0.30s ease-in-out;
-            -ms-transition: all 0.30s ease-in-out;
-            -o-transition: all 0.30s ease-in-out;
+            transition: all 0.30s ease-in-out;
             outline: none;
-        } */
-    /* .form-style-1 input[type=text]:focus,
-        .form-style-1 input[type=date]:focus,
-        .form-style-1 input[type=datetime]:focus,
-        .form-style-1 input[type=number]:focus,
-        .form-style-1 input[type=search]:focus,
-        .form-style-1 input[type=time]:focus,
-        .form-style-1 input[type=url]:focus,
-        .form-style-1 input[type=email]:focus,
-        .form-style-1 textarea:focus,
-        .form-style-1 select:focus {
-            box-shadow: 0 0 8px #88D5E9;
-            border: 1px solid #88D5E9;
-        } */
-    .name-input {
-        border: 1Px solid #ffffff00;
-        border-bottom: 1px solid #767676;
-        width: 49%;
-        outline: none;
-    }
-    .name-input:hover {}
-    .name-input:focus {
-        border-bottom: 2px solid red;
-    }
-    .input-email {
-        border: 1Px solid #ffffff00;
-        border-bottom: 1px solid #767676;
-        width: 100%;
-    }
-    .input-subject-selector {
-        border: 1Px solid #ffffff00;
-        background-color: #ffffff00;
-        width: 100%;
-        optgroup {
-            color: white;
+        }
+        .input-message:focus {
+            transition-duration: all 0.30s ease-in-out;
+            box-shadow: 0 0 8px $light-black-half-opacity-color;
+            border-bottom: 1px solid $light-black-half-opacity-color;
         }
     }
-    .input-message {
-        border: 1Px solid #ffffff00;
-        border-bottom: 1px solid #767676;
-        height: 12em;
-        min-height: 6em;
-        width: 100%;
-    }
-    .required {
+    /* .required {
         color: red;
-    }
+    } */
 }
