--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -171,7 +171,7 @@
                 display: flex;
                 .tss-sub-container {
                     display: inline-flex;
-                    padding-inline: max(10em, 2vw);
+                    /* padding-inline: max(10em, 2vw); */
                     justify-content: center;
                     .tss-desc-container {
                         align-self: center;
