--- a/individual-work/wba-projekt-2/styles/style.scss
+++ b/individual-work/wba-projekt-2/styles/style.scss
@@ -3,9 +3,7 @@
 @import "mixin";
 @import "header";
 @import "footer";
-
-/* @import "homepage"; */
-
+@import "homepage";
 @import "about";
 html,
 body {
