--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -36,24 +36,19 @@
 
 .contact-section {
     margin-top: 10em;
-    margin-bottom: 10em;
     width: 100%;
     height: 100%;
-    border: 1px solid blue;
     display: flex;
     justify-content: center;
     .contact-container {
         display: inline-flex;
         flex-direction: column;
-        border: 1px solid orange;
         .form-heading {
-            border: 1px solid red;
             margin-left: 2em;
         }
         .form-container {
             display: flex;
             justify-content: center;
-            border: 1px solid green;
         }
         .contact-input-container {
             max-width: 30em;
@@ -75,7 +70,7 @@
                 font-weight: bold;
             } */
             input {
-                font-style: italic;
+                /* font-style: italic; */
                 padding: 7px;
                 transition: all 0.30s ease-in-out;
                 outline: none;
@@ -85,21 +80,14 @@
                 box-shadow: 0 0 8px $light-black-half-opacity-color;
                 border-bottom: 1px solid $light-black-half-opacity-color;
             }
-            /* button {
-                
-            } */
             .button {
                 display: inline-block;
-                margin-top: 1.3em;
+                margin-top: 1.5em;
                 padding: 6px 20px 0px 20px;
                 border: none;
                 background-color: #ffffff00;
                 border-bottom: 2px solid black;
                 color: black;
-                /* font-family: inherit; */
-                /* text-align: center; */
-                /* font-size: 13px; */
-                /* box-shadow: 0px 14px 56px -11px #1875FF; */
                 width: 8em;
                 transition: all 0.4s;
                 cursor: pointer;
@@ -119,7 +107,7 @@
                 transition: 0.4s;
             }
             .button:hover span {
-                padding-right: 2.3em;
+                padding-right: 2.2em;
             }
             .button:hover span:after {
                 opacity: 4;
@@ -150,7 +138,7 @@
             height: 10em;
             min-height: 6em;
             width: 100%;
-            font-style: italic;
+            /* font-style: italic; */
             padding: 7px;
             transition: all 0.30s ease-in-out;
             outline: none;
