--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -219,7 +219,7 @@ main {
 
 .footer-main {
   margin-inline: 20vw;
-  margin-top: 4em;
+  margin-top: 10em;
   padding: 1em;
   border-top: 2px solid #857f7fd6;
 }
@@ -629,10 +629,8 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 
 .contact-section {
   margin-top: 10em;
-  margin-bottom: 10em;
   width: 100%;
   height: 100%;
-  border: 1px solid blue;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -652,7 +650,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border: 1px solid orange;
   /* .input-subject-selector {
             border: 1Px solid #ffffff00;
             background-color: #ffffff00;
@@ -664,7 +661,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 }
 
 .contact-section .contact-container .form-heading {
-  border: 1px solid red;
   margin-left: 2em;
 }
 
@@ -675,7 +671,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 1px solid green;
 }
 
 .contact-section .contact-container .contact-input-container {
@@ -692,9 +687,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
                 flex-direction: column;
                 font-weight: bold;
             } */
-  /* button {
-                
-            } */
 }
 
 .contact-section .contact-container .contact-input-container li {
@@ -704,7 +696,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 }
 
 .contact-section .contact-container .contact-input-container input {
-  font-style: italic;
+  /* font-style: italic; */
   padding: 7px;
   -webkit-transition: all 0.30s ease-in-out;
   transition: all 0.30s ease-in-out;
@@ -721,16 +713,12 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 
 .contact-section .contact-container .contact-input-container .button {
   display: inline-block;
-  margin-top: 1.3em;
+  margin-top: 1.5em;
   padding: 6px 20px 0px 20px;
   border: none;
   background-color: #ffffff00;
   border-bottom: 2px solid black;
   color: black;
-  /* font-family: inherit; */
-  /* text-align: center; */
-  /* font-size: 13px; */
-  /* box-shadow: 0px 14px 56px -11px #1875FF; */
   width: 8em;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
@@ -756,7 +744,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 }
 
 .contact-section .contact-container .contact-input-container .button:hover span {
-  padding-right: 2.3em;
+  padding-right: 2.2em;
 }
 
 .contact-section .contact-container .contact-input-container .button:hover span:after {
@@ -782,7 +770,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   height: 10em;
   min-height: 6em;
   width: 100%;
-  font-style: italic;
+  /* font-style: italic; */
   padding: 7px;
   -webkit-transition: all 0.30s ease-in-out;
   transition: all 0.30s ease-in-out;
